--- a/index.html
+++ b/index.html
@@ -80,7 +80,6 @@
         </div>
         <div class="annHeader"> <h1>Announcements</h1></div>
         <div class="grey ann">
-   
         <p>Site Maintenance</p>
       <p>Vestibulum condimentum tellus la in accumsan elit maximus ac. Dor hendrerit sodales congue...</p>
       <hr>
@@ -106,8 +105,7 @@
                 Article about news...</p>
             </div>
             <div class="trendcard lightgrey">
-                <img src="images/3551911.jpg
-                " class="avatar">
+                <img src="images/3551911.jpg" class="avatar">
                 <p> <a href="">@taniam</a> <br>
                 The important article...</p>
             </div>
